--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Portfolio</h2>
             <div class="project">
                 <h3>Project 1</h3>
-                <p>Description of Project 1.</p>
+                <p>Coming soon...</p>
             </div>
             <!-- Add more projects here -->
         </section>
