--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <div id="dynamicContent">
+        <?php include 'time.php'; ?>
+    </div>
     <header>
         <h1>Soham Pal</h1>
         <nav>
