--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <div id="dynamicContent">
-        <?php include 'time.php'; ?>
     </div>
     <header>
         <h1>Soham Pal</h1>
@@ -44,7 +42,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <!-- Add contact form or email address here -->
+            <p>E-mail 📩📨 = botmaker583@gmail.com</p>
         </section>
     </main>
 
