--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    </div>
     <header>
         <h1>Soham Pal</h1>
         <nav>
@@ -37,12 +36,12 @@
 
         <section id="blog">
             <h2>Blog</h2>
-            <!-- Add blog posts here -->
+            <?php include 'blog-posts.php'; ?>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>E-mail 📩📨 = botmaker583@gmail.com</p>
+            <!-- Add contact form or email address here -->
         </section>
     </main>
 
